--- a/games.html
+++ b/games.html
@@ -100,13 +100,23 @@
         </div>
       </div>
       <div class="game-card">
-        <img src="images/games/brickbreaker.svg" alt="Brick Breaker icon" class="icon" loading="lazy" />
+        <img src="images/games/brickbreaker.jpg" alt="Brick Breaker icon" class="icon" loading="lazy" />
         <div>
           <h3>Brick Breaker</h3>
           <p class="subtitle">Bounce the ball, break all bricks, and keep the ball in play.</p>
         </div>
         <div class="cta-row" style="margin-top:12px">
           <a class="cta cta-primary" href="Games/brickbreaker.html">Play Brick Breaker</a>
+        </div>
+      </div>
+      <div class="game-card">
+        <img src="images/games/flappy.jpg" alt="Flappy Bird icon" class="icon" loading="lazy" />
+        <div>
+          <h3>Flappy Bird</h3>
+          <p class="subtitle">Tap or press Space to flap and pass through pipe gaps for points.</p>
+        </div>
+        <div class="cta-row" style="margin-top:12px">
+          <a class="cta cta-primary" href="Games/flappy.html">Play Flappy Bird</a>
         </div>
       </div>
       <div class="game-card">
