--- a/games.html
+++ b/games.html
@@ -120,6 +120,26 @@
         </div>
       </div>
       <div class="game-card">
+        <img src="images/games/SpaceShooter.png" alt="Space Shooter icon" class="icon" loading="lazy" />
+        <div>
+          <h3>Space Shooter</h3>
+          <p class="subtitle">Control a ship, destroy enemies, and survive waves.</p>
+        </div>
+        <div class="cta-row" style="margin-top:12px">
+          <a class="cta cta-primary" href="Games/spaceshooter.html">Play Space Shooter</a>
+        </div>
+      </div>
+      <div class="game-card">
+        <img src="images/games/maze.jpg" alt="Maze Escape icon" class="icon" loading="lazy" />
+        <div>
+          <h3>Maze Escape</h3>
+          <p class="subtitle">Navigate the maze and reach the exit tile.</p>
+        </div>
+        <div class="cta-row" style="margin-top:12px">
+          <a class="cta cta-primary" href="Games/maze.html">Play Maze Escape</a>
+        </div>
+      </div>
+      <div class="game-card">
         <img src="images/games/snake.png" alt="Snake icon" class="icon" loading="lazy" />
         <div>
           <h3>Snake</h3>
