--- a/games.html
+++ b/games.html
@@ -140,6 +140,16 @@
         </div>
       </div>
       <div class="game-card">
+        <img src="images/games/pace.jpg" alt="Paceman icon" class="icon" loading="lazy" />
+        <div
+          <h3>Paceman</h3>
+          <p class="subtitle">Eat all pellets and avoid ghosts. Power pellets make ghosts vulnerable.</p>
+        </div>
+        <div class="cta-row" style="margin-top:12px">
+          <a class="cta cta-primary" href="Games/paceman.html">Play Paceman</a>
+        </div>
+      </div>
+      <div class="game-card">
         <img src="images/games/snake.png" alt="Snake icon" class="icon" loading="lazy" />
         <div>
           <h3>Snake</h3>
