--- a/games.html
+++ b/games.html
@@ -141,7 +141,7 @@
       </div>
       <div class="game-card">
         <img src="images/games/pace.jpg" alt="Paceman icon" class="icon" loading="lazy" />
-        <div
+        <div>
           <h3>Paceman</h3>
           <p class="subtitle">Eat all pellets and avoid ghosts. Power pellets make ghosts vulnerable.</p>
         </div>
